--- a/Index.html
+++ b/Index.html
@@ -10,6 +10,15 @@
     <header>
         <img class="Logo" src="Legendary_Motorsport_Actual.webp" alt="Legendary Motosport" width="400px" height="150px">
         <img class="GTA" src="Grand_Theft_Auto_logo_series.svg.png" alt="GTA logo" width="150px" height="100px">
-    <head>
+    </header>
+    <nav>
+        <a href="Index.html">Inicio</a>
+        <a href="">2 Puertas</a>
+        <a href="">4 Puertas</a>
+        <a href="">Oferta</a>
+    </nav>
+    <div class="Inicio">
+        <h2></h2>
+    </div>
 </body>
 </html>
