--- a/Index.html
+++ b/Index.html
@@ -26,9 +26,9 @@
 
     <div class="hero">
         <div class="hero-overlay">
-            <h2>¿Buscas un auto seguro, ecológico y de bajo consumo?</h2>
-            <p>Te equivocaste de sitio web.</p>
-            <h3>¿Quieres que se les caigan los pantalones a tu paso?</h3>
+            <h2>¿Buscas un coche seguro, ecológico y de bajo consumo?</h2>
+            <p>Pues aquí no lo vas a encontrar.</p>
+            <h3>¿Quieres uno que supere el límite de velocidad?</h3>
             <p class="welcome">¡BIENVENIDO! Estás en el lugar adecuado.</p>
             <div class="hero-stats">
                 <div class="stat-item">
@@ -68,7 +68,7 @@
             <div class="vehicle-card featured">
                 <div class="featured-badge">NUEVO</div>
                 <div class="vehicle-image">
-                    <div class="image-placeholder">GROTTI TURISMO</div>
+                        <img src="TurismoR-GTAVee-FrontQuarter.webp" alt="GROTTI TURISMO R" width="450px" height="200px">
                 </div>
                 <div class="vehicle-info">
                     <h3>GROTTI TURISMO R</h3>
@@ -78,7 +78,7 @@
                         <span>Velocidad: ★★★★★</span>
                     </div>
                     <div class="vehicle-footer">
-                        <span class="price">$500,000</span>
+                        <span class="price">$1,500,000</span>
                         <button class="buy-btn">COMPRAR AHORA</button>
                     </div>
                 </div>
@@ -86,7 +86,7 @@
 
             <div class="vehicle-card">
                 <div class="vehicle-image">
-                    <div class="image-placeholder">PEGASSI ZENTORNO</div>
+                    <img src="Zentorno-GTAVee-FrontQuarter.webp" alt="PEGASSI ZENTORNO" width="420px" height="200px">
                 </div>
                 <div class="vehicle-info">
                     <h3>PEGASSI ZENTORNO</h3>
@@ -104,7 +104,7 @@
 
             <div class="vehicle-card">
                 <div class="vehicle-image">
-                    <div class="image-placeholder">TRUFFADE ADDER</div>
+                    <img src="Trufade-Adder.webp" alt="TRUFFADE ADDER" width="420px" height="200px">
                 </div>
                 <div class="vehicle-info">
                     <h3>TRUFFADE ADDER</h3>
@@ -122,17 +122,17 @@
 
             <div class="vehicle-card">
                 <div class="vehicle-image">
-                    <div class="image-placeholder">ÖVERFLÖD ENTITY</div>
+                    <img src="EntityXF-GTAVee-FrontQuarter.webp" alt="OVERFLOD ENTITY XF" width="420px" height="210px">
                 </div>
                 <div class="vehicle-info">
-                    <h3>ÖVERFLÖD ENTITY XF</h3>
+                    <h3>OVERFLOD ENTITY XF</h3>
                     <p class="vehicle-desc">Tecnología sueca de vanguardia con sistemas híbridos de alta eficiencia</p>
                     <div class="vehicle-stats">
                         <span>Capacidad: 2</span>
                         <span>Velocidad: ★★★★★</span>
                     </div>
                     <div class="vehicle-footer">
-                        <span class="price">$795,000</span>
+                        <span class="price">$895,000</span>
                         <button class="buy-btn">COMPRAR AHORA</button>
                     </div>
                 </div>
@@ -140,7 +140,7 @@
 
             <div class="vehicle-card">
                 <div class="vehicle-image">
-                    <div class="image-placeholder">GROTTI CHEETAH</div>
+                    <img src="Cheetah-GTAVee-FrontQuarter.webp" alt="GROTTI CHEETAH" width="420px" height="210px">
                 </div>
                 <div class="vehicle-info">
                     <h3>GROTTI CHEETAH</h3>
@@ -150,7 +150,7 @@
                         <span>Velocidad: ★★★★★</span>
                     </div>
                     <div class="vehicle-footer">
-                        <span class="price">$650,000</span>
+                        <span class="price">$950,000</span>
                         <button class="buy-btn">COMPRAR AHORA</button>
                     </div>
                 </div>
@@ -158,7 +158,7 @@
 
             <div class="vehicle-card">
                 <div class="vehicle-image">
-                    <div class="image-placeholder">PEGASSI VACCA</div>
+                    <img src="Vacca-GTAV-front.png.jpg" alt="PEGASSI VACCA" width="420px" height="240px">
                 </div>
                 <div class="vehicle-info">
                     <h3>PEGASSI VACCA</h3>
@@ -168,7 +168,7 @@
                         <span>Velocidad: ★★★★☆</span>
                     </div>
                     <div class="vehicle-footer">
-                        <span class="price">$240,000</span>
+                        <span class="price">$1,250,000</span>
                         <button class="buy-btn">COMPRAR AHORA</button>
                     </div>
                 </div>
@@ -183,7 +183,7 @@
         <div class="vehicles-grid">
             <div class="vehicle-card">
                 <div class="vehicle-image">
-                    <div class="image-placeholder">PROGEN T20</div>
+                    <img src="t20 (1).jpg" alt="PROGEN T20" width="700px" height="300px">
                 </div>
                 <div class="vehicle-info">
                     <h3>PROGEN T20</h3>
@@ -201,7 +201,7 @@
 
             <div class="vehicle-card">
                 <div class="vehicle-image">
-                    <div class="image-placeholder">PEGASSI OSIRIS</div>
+                    <img src="Pegassi_osiris.jpg" alt="PEGASSI OSIRIS" width="425px" height="210px">
                 </div>
                 <div class="vehicle-info">
                     <h3>PEGASSI OSIRIS</h3>
@@ -220,7 +220,7 @@
             <div class="vehicle-card featured">
                 <div class="featured-badge">POPULAR</div>
                 <div class="vehicle-image">
-                    <div class="image-placeholder">VAPID FMJ</div>
+                    <img src="FMJ-GTAO-FrontQuarter.webp" alt="VAPID FMJ" width="420px" height="230px">
                 </div>
                 <div class="vehicle-info">
                     <h3>VAPID FMJ</h3>
@@ -238,7 +238,7 @@
 
             <div class="vehicle-card">
                 <div class="vehicle-image">
-                    <div class="image-placeholder">ANNIS RE-7B</div>
+                    <img src="ANNIS_RE-7B.jpg" alt="ANNIS RE-7B" width="420px" height="230px">
                 </div>
                 <div class="vehicle-info">
                     <h3>ANNIS RE-7B</h3>
@@ -256,7 +256,7 @@
 
             <div class="vehicle-card">
                 <div class="vehicle-image">
-                    <div class="image-placeholder">PROGEN TYRUS</div>
+                    <img src="Tyrus-GTAOee-FrontQuarter.webp" alt="PROGEN TYRUS" width="420px" height="200px">
                 </div>
                 <div class="vehicle-info">
                     <h3>PROGEN TYRUS</h3>
@@ -274,7 +274,7 @@
 
             <div class="vehicle-card">
                 <div class="vehicle-image">
-                    <div class="image-placeholder">GROTTI X80</div>
+                    <img src="X80_Proto_GTAO_vue_avant.webp" alt="GROTTI X80 PROTO" width="420px" height="200px">
                 </div>
                 <div class="vehicle-info">
                     <h3>GROTTI X80 PROTO</h3>
@@ -307,7 +307,7 @@
         <div class="vehicles-grid">
             <div class="vehicle-card">
                 <div class="vehicle-image">
-                    <div class="image-placeholder">DEWBAUCHEE MASSACRO</div>
+                    <img src="Massacro-GTAVe-FrontQuarter.webp" alt="DEWBAUCHEE MASSACRO" width="420px" height="210px">
                 </div>
                 <div class="vehicle-info">
                     <h3>DEWBAUCHEE MASSACRO</h3>
@@ -317,7 +317,7 @@
                         <span>Velocidad: ★★★★☆</span>
                     </div>
                     <div class="vehicle-footer">
-                        <span class="price">$275,000</span>
+                        <span class="price">$975,000</span>
                         <button class="buy-btn">COMPRAR AHORA</button>
                     </div>
                 </div>
@@ -325,7 +325,7 @@
 
             <div class="vehicle-card">
                 <div class="vehicle-image">
-                    <div class="image-placeholder">BENEFACTOR SURANO</div>
+                    <img src="SuranoDown-GTAV-front.webp" alt="BENEFACTOR SURANO" width="420px" height="220px">
                 </div>
                 <div class="vehicle-info">
                     <h3>BENEFACTOR SURANO</h3>
@@ -343,7 +343,7 @@
 
             <div class="vehicle-card">
                 <div class="vehicle-image">
-                    <div class="image-placeholder">LAMPADATI FURORE GT</div>
+                    <img src="X80_Proto_GTAO_vue_avant.webp" alt="LAMPADATI FURORE GT" width="420px" height="200px">
                 </div>
                 <div class="vehicle-info">
                     <h3>LAMPADATI FURORE GT</h3>
@@ -361,7 +361,7 @@
 
             <div class="vehicle-card">
                 <div class="vehicle-image">
-                    <div class="image-placeholder">OCELOT LYNX</div>
+                    <img src="X80_Proto_GTAO_vue_avant.webp" alt="GROTTI X80 PROTO" width="420px" height="200px">
                 </div>
                 <div class="vehicle-info">
                     <h3>OCELOT LYNX</h3>
@@ -379,7 +379,7 @@
 
             <div class="vehicle-card">
                 <div class="vehicle-image">
-                    <div class="image-placeholder">HIJAK KHAMELION</div>
+                    <img src="X80_Proto_GTAO_vue_avant.webp" alt="GROTTI X80 PROTO" width="420px" height="200px">
                 </div>
                 <div class="vehicle-info">
                     <h3>HIJAK KHAMELION</h3>
@@ -397,7 +397,7 @@
 
             <div class="vehicle-card">
                 <div class="vehicle-image">
-                    <div class="image-placeholder">COIL VOLTIC</div>
+                    <img src="X80_Proto_GTAO_vue_avant.webp" alt="GROTTI X80 PROTO" width="420px" height="200px">
                 </div>
                 <div class="vehicle-info">
                     <h3>COIL VOLTIC</h3>
@@ -440,7 +440,7 @@
 
             <div class="vehicle-card">
                 <div class="vehicle-image">
-                    <div class="image-placeholder">GROTTI STINGER GT</div>
+                    <img src="X80_Proto_GTAO_vue_avant.webp" alt="GROTTI X80 PROTO" width="420px" height="200px">
                 </div>
                 <div class="vehicle-info">
                     <h3>GROTTI STINGER GT</h3>
@@ -458,7 +458,7 @@
 
             <div class="vehicle-card">
                 <div class="vehicle-image">
-                    <div class="image-placeholder">PEGASSI MONROE</div>
+                    <img src="X80_Proto_GTAO_vue_avant.webp" alt="GROTTI X80 PROTO" width="420px" height="200px">
                 </div>
                 <div class="vehicle-info">
                     <h3>PEGASSI MONROE</h3>
