--- a/Index.html
+++ b/Index.html
@@ -19,8 +19,6 @@
                     <a href="#supercars">SUPERDEPORTIVOS</a>
                     <a href="#sports">DEPORTIVOS</a>
                     <a href="#classics">CLÁSICOS</a>
-                    <a href="#motorcycles">MOTOCICLETAS</a>
-                    <a href="#special">ESPECIALES</a>
                 </nav>
             </div>
             <div class="bank-balance">
@@ -66,8 +64,6 @@
             <button class="filter-btn active">TODOS</button>
             <button class="filter-btn">2 PUERTAS</button>
             <button class="filter-btn">4 PUERTAS</button>
-            <button class="filter-btn">MOTOCICLETAS</button>
-            <button class="filter-btn">TODOTERRENO</button>
         </div>
 
         <div class="vehicles-grid">
@@ -428,7 +424,7 @@
         <div class="vehicles-grid">
             <div class="vehicle-card">
                 <div class="vehicle-image">
-                    <img src="Truffade-Z-Type.webp" alt="TRUFFADE Z-TYPE" width="420px" height="200px">
+                    <img src="Truffade-Z-Type.webp.webp" alt="TRUFFADE Z-TYPE" width="420px" height="200px">
                 </div>
                 <div class="vehicle-info">
                     <h3>TRUFFADE Z-TYPE</h3>
