--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
         <div class="promo-content">
             <h2>DESCUENTO ESPECIAL</h2>
             <p>Síguenos en LifeInvader para obtener un 10% de descuento en tu próxima compra</p>
-            <a href="index" class="promo-btn">SÍGUENOS AHORA</a>
+            <a href="index2.html" class="promo-btn">SÍGUENOS AHORA</a>
         </div>
     </section>
 
