--- a/index2.html
+++ b/index2.html
@@ -49,7 +49,7 @@
 
             <div class="action-buttons">
                 <button class="btn btn-follow" onclick="followPage()">SEGUIR AHORA</button>
-                <a href="index.html" class="btn btn-back" onclick="window.close()">VOLVER A LA TIENDA</a>
+                <a href="index.html" class="btn btn-back">VOLVER A LA TIENDA</a> 
             </div>
         </div>
     </div>
