--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="header-container">
             <div class="header-left">
                 <div class="logo">
-                    <h1>LEGENDARY MOTORSPORT</h1>
+                    <h1>LEGENDARY MOTORSPORT.</h1>
                     <p class="tagline">DÉJALOS QUE GOTEEN EN TU RETROVISOR</p>
                 </div>
                 <nav>
